[package]
name = "unveil-rs"
version = "0.1.1-alpha1"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2018"
license = "MIT"
readme = "crates-io.md"
repository = "https://github.com/oknozor/unveil-rs"
documentation = "https://docs.rs/unveil-rs"
description = """
Unveil Rs is a tool to create presentations from markdown files.
"""

travis-ci = { repository = "oknozor/unveil-rs", branch = "master" }

[[bin]]
name = "unveil"
path = "src/main.rs"

[features]
default = ["unveil-cli"]
unveil-cli = [ "clap"]

[dependencies]
pulldown-cmark = "0.7.0"
anyhow = "1.0.26"
horrorshow = "0.8.1"
dirs = "2.0"
toml = "0.5.6"
serde_derive = "^1.0"
serde = "^1.0"
iron = "0.6.1"
notify = "4.0.15"
open = "1.4.0"
staticfile = "0.5.0"
ws = "0.9.1"
sass-rs = "0.2.2"
lazy_static = "1.4.0"
regex = "1.3.5"

# Cli
clap = { version = "2.33.0", optional = true }

[dev-dependencies]
tempfile = "3.1.0"


