[package]
name = "unveil-rs"
version = "0.1.2-alpha1"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2021"
license = "MIT"
readme = "crates-io.md"
repository = "https://github.com/oknozor/unveil-rs"
documentation = "https://docs.rs/unveil-rs"
description = """
Unveil Rs is a tool to create presentations from markdown files.
"""

[badges]
travis-ci = { repository = "oknozor/unveil-rs", branch = "master" }

[[bin]]
name = "unveil"
path = "src/main.rs"

[features]
default = ["unveil-cli"]
unveil-cli = ["clap"]

[dependencies]
pulldown-cmark = "0.9.2"
anyhow = "1.0.66"
horrorshow = "0.8.4"
dirs = "4.0.0"
toml = "0.5.9"
serde_derive = "^1.0"
serde = "^1.0"
iron = "0.6.1"
notify = "5.0.0"
open = "3.0.3"
staticfile = "0.5.0"
ws = "0.9.2"
sass-rs = "0.2.2"
lazy_static = "1.4.0"
regex = "1.7.0"

# Cli
clap = { version = "2.33.0", optional = true }

[dev-dependencies]
tempfile = "3.3.0"


