[package]
name = "unveil-rs"
version = "0.1.2-alpha1"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2021"
license = "MIT"
readme = "crates-io.md"
repository = "https://github.com/oknozor/unveil-rs"
documentation = "https://docs.rs/unveil-rs"
description = """
Unveil Rs is a tool to create presentations from markdown files.
"""

[badges]
travis-ci = { repository = "oknozor/unveil-rs", branch = "master" }

[[bin]]
name = "unveil"
path = "src/main.rs"

[features]
default = ["unveil-cli"]
unveil-cli = ["clap"]

[dependencies]
pulldown-cmark = "0.9.2"
anyhow = "1.0.66"
horrorshow = "0.8.4"
toml = "0.5.9"
serde = { version = "1", features = ["derive"] }
warp = "0.3.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
notify = "5.0.0"
open = "3.0.3"
ws = "0.9.2"
sass-rs = "0.2.2"
once_cell = "1.16.0"
regex = "1.7.0"

# Cli
clap = { version = "2.33.0", optional = true }

[dev-dependencies]
tempfile = "3.3.0"


